Add keywords to the slack bot message.
Several times we tried to figure out why a job description had been posted to the
channel and searched particular keywords at the web site. Now matched keywords
if any are displayed as the message attachment.

--- a/Actor.SlackPublisher/App.config
+++ b/Actor.SlackPublisher/App.config
@@ -5,13 +5,14 @@
   </startup>
 
   <appSettings>
-    <add key="http://jobs.dou.ua/vacancies/feeds/?category=.NET" value="F#, functional programming, monad, haskell, scala, clojure, cqrs, ddd, domain driven, reactive, event sourcing, actor, akka, akka.net, orleans" />
-    <add key="http://jobs.dou.ua/vacancies/feeds/?category=Java" value="F#, functional programming, monad, haskell, scala, clojure, cqrs, ddd, domain driven, reactive, event sourcing, actor, akka, akka.net, orleans" />
-    <add key="http://jobs.dou.ua/vacancies/feeds/?category=Scala" value="" />
+    <add key="http://jobs.dou.ua/vacancies/feeds/?category=.NET" value="F#, functional programming, monad, haskell, scala, clojure, cqrs, ddd, domain driven, reactive, event sourcing, actor, akka, akka.net, orleans"/>
+    <add key="http://jobs.dou.ua/vacancies/feeds/?category=Java" value="F#, functional programming, monad, haskell, scala, clojure, cqrs, ddd, domain driven, reactive, event sourcing, actor, akka, akka.net, orleans"/>
+    <add key="http://jobs.dou.ua/vacancies/feeds/?category=Scala" value=""/>
 
-    <add key="SlackHookUrl" value="https://hooks.slack.com/services/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" />
-    <add key="SlackHookName" value="functional-works" />
-    <add key="SlackHookEmoji" value=":curly_loop:" />
+    <add key="SlackHookUrl" value="https://hooks.slack.com/services/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"/>
+    <add key="SlackHookName" value="functional-works"/>
+    <add key="SlackHookEmoji" value=":curly_loop:"/>
+    <add key="KeywordColor" value="#36a64f"/>
     
   </appSettings>
 </configuration>
