--- a/Actor.SlackPublisher/Actor.SlackPublisher.csproj
+++ b/Actor.SlackPublisher/Actor.SlackPublisher.csproj
@@ -80,6 +80,7 @@
       <Link>Properties\SolutionAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AppSettings.cs" />
+    <Compile Include="MatchInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slack.cs" />
     <Compile Include="SlackPublisher.cs" />
